...

            override suspend fun getEntriesByQuery(query: DictQuery): List<DictWord> {
                return (1..11).map {
                    DictWord(
                        id = it,
                        language = DictLanguage(
                            name = "English",
                            code = "en"
                        ),
                        baseForm = "mock test dict entry #$it"
                    )
                }.filter {
                    it.baseForm.contains(query.queryString)
...
                        id = it,
                        languageFrom = DictLanguage(
                            name = "Hungarian",
                            code = "hu"
                        ),
                        languageTo = DictLanguage(
                            name = "French",
                            code = "fr"
                        ),
                        description = "mock test dict #$it"
                    )
                }
            }
...
