...
                                ),
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .wrapContentWidth(Alignment.CenterHorizontally)
                                    .padding(vertical = 10.dp)
                            ) {
                                Text("IMPORT NEW DICTIONARIES")
                            }
                        }
                    }
                }
            }
        }
...
